--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
           <button id="b" type="submit" name="vote" class="b" value="b">{{option_b}}</button>
         </form>
         <div id="tip">
-          (ESTE CONTENIDO HA SIDO MODIFICADO)
+          (ESTE CONTENIDO HA SIDO MODIFICADO)<br/>
           (Tip: you can change your vote)
         </div>
         <div id="result">
